# ImageProcess

./: .gitignore
GaussFilter/: CMakeLists.txt
GaussFilter/include/: gaussfilter_cpu.h
GaussFilter/src/: gaussfilter_cpu.cpp
GaussFilter/test/: test_gaussfilter.cpp
MeanFilter/: CMakeLists.txt
MeanFilter/include/: meanfilter_cpu.h
MeanFilter/src/: meanfilter_cpu.cpp
MeanFilter/test/: test_meanfilter.cpp
RGB2Gray/: CMakeLists.txt
RGB2Gray/include/: rgb2gray_cpu.h  rgb2gray_gpu.h
RGB2Gray/src/: rgb2gray_cpu.cpp  rgb2gray_gpu.cu
RGB2Gray/test/: test_rgb2gray.cpp  test_rgb2gray.cu
common/: utils.h
